Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28804

single buffer OpenGL does no longer work on OSX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.2
    • 5.0.0
    • GUI: OpenGL
    • None
    • Mac OSX 10.8
    • macOS
    • ef7c9b5b525c539d12d17f61b979c1c4e0751076

      Enabling single buffered drawing for a QGLWidget does no longer work.
      It worked in Qt 4.8.x.
      If a QGLWidget is created with a QGLFormat with "setDoubleBuffer(false)" then the resulting QGLWidget is still double buffered and flushing drawing with glFlush() or glFinish() does draw nothing.
      In the attached example the GLWidget creator will abort if the demo was compiled with 5.0.0.

        For Gerrit Dashboard: QTBUG-28804
        # Subject Branch Project Status CR V

            rodal Samuel Rødal
            kio Günter Woigk
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes