Fixed missing support for single buffered OpenGL on OS X.

Task-number: QTBUG-28804
Change-Id: I426a9bbc08953d777f67a23b050570e9f7d442d7
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>

cregit: ef7c9b5b525c539d12d17f61b979c1c4e0751076 https://github.com/qt/qtbase/commit/ef7c9b5b525c539d12d17f61b979c1c4e0751076